Github Codespaces are great

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,10 @@
 		"typescript": "^4.4.0-beta"
 	},
 	"dependencies": {
+		"@feathersjs/authentication-client": "^4.5.11",
+		"@feathersjs/feathers": "^4.5.11",
+		"@feathersjs/rest-client": "^4.5.11",
+		"axios": "^0.21.4",
 		"cookie-storage": "^6.1.0",
 		"feathers-hooks-common": "^5.0.6"
 	}
