--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,6 +25,7 @@
 		"@asas/client": "workspace:^1.0.0",
 		"@chakra-ui/hooks": "^1.5.5",
 		"@chakra-ui/react-utils": "^1.1.2",
+		"@feathersjs/feathers": "^4.5.11",
 		"@types/react": "^17.0.16",
 		"feathers-hooks-common": "^5.0.6",
 		"react": "^17.0.2"
